--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
     font-size: 1.2vw;
     color: white;
     background-color: #02021F;
-    height: fit-content;
 }
 
 a{
@@ -41,15 +40,13 @@ a{
 }
 
 
-
-
 .menubar{
     width: 100vw;
+    height: 10vh;
     position: sticky;
-    top:0;
+    top: 0;
     left: 0;
     right: 0;
-    height: 10vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -76,21 +73,19 @@ a{
 
 .itembar{
     position: absolute;
-    padding-left: 5px;
     height: 90vh;
     width: 25vw;
     background-color: grey;
 }
-
 .item-details{
     background-color: white;
     color: black;
     width: 50vw;
     height: 100vw;
     position: absolute;
-    top: 10vh;
+    top: 0;
     height: 90vh;
-    left: 25vw;
+    left: 23vw;
     display: none;
     text-align: center;
     z-index: 3;
@@ -101,12 +96,12 @@ tr {
     justify-content: space-between;
     border: 1px solid black;
 
+
 }
 
 
 
 table {
-    width: 50vw;
     display: flex;
     justify-content: space-between;
 }
@@ -114,6 +109,7 @@ table {
 .itemheading{
     font-size: 1.3vw;
     margin-top: 0.5vh;
+    margin-left: 1vw;
 }
 
 .itemheading:hover{
@@ -295,6 +291,5 @@ table {
     .welcome-image{
         height: 100%;
         width: auto;
-
     }
 }
